# wireguard

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE
docs/: README.md  security_todos.md  test_plan.md  wg_spec.md
examples/: Dockerfile.test_peer  Dockerfile.wireguard  debug_full_tunnel_client_run_as_root.sh  rust-wg-dev.container  setup_wg_and_run_curl_in_peer.sh  test_peer.container
rust-wg/src/: config.rs  dns.rs  netlink_util.rs  nft.rs  shutdown.rs  wg_iface.rs
rust-wg/src/config/: inputs.rs  io.rs  peers.rs  qr.rs
rust-wg/src/config/generate/: mod.rs  peer_conf.rs  server_conf.rs
rust-wg/src/wg_iface/: link.rs  mod.rs  peers.rs  routes.rs  util.rs
src/: cli.rs  dns.rs  main.rs  module_check.rs  netlink_util.rs  nft.rs  runtime.rs  shutdown.rs
src/config/: assets.rs  env.rs  inputs.rs  io.rs  mod.rs  peers.rs  types.rs
src/config/generate/: ip_alloc.rs  keys.rs  mod.rs  peer_conf.rs  server_conf.rs
src/wg_iface/: addresses.rs  mod.rs  peers.rs  routes.rs  util.rs
