[package]
name = "rust-wg"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
ipnet = "2"
sha2 = "0"
uuid = { version = "1", features = ["v4"] }
hex = "0"
futures = "0"
libc = "0"
rtnetlink = "0"
netlink-packet-route = "0"
